--- a/backend/mycareer/pom.xml
+++ b/backend/mycareer/pom.xml
@@ -72,6 +72,11 @@
 
 
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
