--- a/backend/mycareer/src/main/resources/application.properties
+++ b/backend/mycareer/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.jsp
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=ssafy
