--- a/backend/mycareer/src/main/resources/application.properties
+++ b/backend/mycareer/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.jsp
 
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3308/mydb?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
