--- a/frontend/mycareer/package.json
+++ b/frontend/mycareer/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lourenci/react-kanban": "^1.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,7 +19,9 @@
     "react-modal-login": "^1.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.1.0",
+    "typescript": "~3.7.2",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
