--- a/backend/mycareer/src/main/resources/application.properties
+++ b/backend/mycareer/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3308/mydb?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=ssafy
+spring.datasource.password=1234
