[20200526 이민우] .gitignore 수정

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,18 @@
 /.metadata/
+
+
+# Build Artifacts
+
+.gradle/
+build/
+target/
+bin/
+sql/
+
+dependency-reduced-pom.xml
+
+# Eclipse Project Files
+
+.classpath
+.project
+.settings/
