--- a/backend/mycareer/pom.xml
+++ b/backend/mycareer/pom.xml
@@ -12,14 +12,16 @@
 	<groupId>com.mycareer</groupId>
 	<artifactId>mycareer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>mycareer</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	
 	<dependencies>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
