[20200527 이정수]자격증, URl CRUD구현

--- a/backend/mycareer/src/main/resources/application.properties
+++ b/backend/mycareer/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=ssafy
-
-spring.datasource.url=jdbc:mysql://13.124.227.192:3306/mycareer?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3308/mydb?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=ssafyA103K!@
+spring.datasource.password=1234
+
+#spring.datasource.url=jdbc:mysql://13.124.227.192:3306/mycareer?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=ssafyA103K!@
