--- a/frontend/mycareer/package.json
+++ b/frontend/mycareer/package.json
@@ -20,6 +20,7 @@
     "react-modal-login": "^1.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-standalone-form": "^1.1.0",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2",
     "zlib": "^1.0.5"
