--- a/frontend/mycareer/package.json
+++ b/frontend/mycareer/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-standalone-form": "^1.1.0",
+    "sortablejs": "^1.10.2",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2",
     "zlib": "^1.0.5"
