--- a/backend/mycareer/src/main/resources/application.properties
+++ b/backend/mycareer/src/main/resources/application.properties
@@ -2,18 +2,20 @@ spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
 
 
-# mysql database setting
+## mysql database setting
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3308/mydb?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
-
-#spring.datasource.url=jdbc:mysql://13.124.227.192:3306/mycareer?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=ssafyA103K!@
+#spring.datasource.password=ssafy
+
+spring.datasource.url=jdbc:mysql://13.124.227.192:3306/mycareer?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=ssafyA103K!@
 
 # File upload setting
 #spring.servlet.multipart.location=C:/Temp
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.enabled= true
 spring.servlet.multipart.max-request-size = 10MB
+
+
